--- a/src/Components/ExpenseItem.css
+++ b/src/Components/ExpenseItem.css
@@ -8,6 +8,8 @@
     border-radius: 12px;
     background-color: #4b4b4b;
     color: white;
+    border-radius: 12px;
+    box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
 }
 
 .expense-item__description {
